# Beautifull_Surgery

./: .gitignore  README.md  cleanup_files.py  excel_to_files.py  locations_api_response.json
backend/: .env.example  import_data.py  main.py  models.py  pyproject.toml  requirements.txt
excel_sheets_data/: Clinics_&_Hospital.json  Locations.json  Procedure_Offerings.json  Provider.json
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/config/: api.js
